feat: add vercel.json SPA rewrites, ngrok headers, and CORS configuration